--- a/localization/kl/language.json
+++ b/localization/kl/language.json
@@ -1,1 +1,25 @@
-//
+[
+    {"about":"Umqu' ghot"},
+    {"stuff":"GhoD"},
+    {"things":"Doch"},
+    {"whatnot":"Sar"},
+    {"settings":"DuH"},
+    {"sub01":"TlhIlHal GhoD"},
+    {"sub02":"Lu' GhoD"},
+    {"sub03":"GhaH GhoD"},
+    {"sub04":"Bo GhoD"},
+    {"sub11":"Nuq Qo'"},
+    {"sub12":"Nuq DaH?"},
+    {"sub13":"Nuq...?"},
+    {"sub13":"TeywI'"},
+    {"userId":"Nuv mI'"},
+    {"username":"Nuv Pong"},
+    {"first_name":"Wa'DIch pong"},
+    {"last_name":"Wa'Hu' pong"},
+    {"email":"QIn"},
+    {"city":"Veng"},
+    {"state":"Sep"},
+    {"animal_scientific":"QeD pong"},
+    {"animal_common":"Motlh Pong"},
+    {"drug_name":"Hergh Pong"}
+]
