--- a/localization/kl/language.json
+++ b/localization/kl/language.json
@@ -1,4 +1,6 @@
 [
+    {"reportTitleGeneral":"Sa' Ja'"},
+    {"reportTitleThings":"Doch Ja'"},
     {"about":"Umqu' ghot"},
     {"stuff":"GhoD"},
     {"things":"Doch"},
