--- a/localization/en/language.json
+++ b/localization/en/language.json
@@ -1,6 +1,6 @@
 [
     {"reportTitleGeneral":"General Report"},
-    {"reportTitleThings":"Things Report"},
+    {"reportTitleMoney":"Things Report"},
     {"about":"About"},
     {"stuff":"Stuff"},
     {"things":"Things"},
