--- a/localization/kl/language.json
+++ b/localization/kl/language.json
@@ -1,6 +1,6 @@
 [
     {"reportTitleGeneral":"Sa' Ja'"},
-    {"reportTitleThings":"Doch Ja'"},
+    {"reportTitleMoney":"Huch Ja'"},
     {"about":"Umqu' ghot"},
     {"stuff":"GhoD"},
     {"things":"Doch"},
