--- a/localization/en/language.json
+++ b/localization/en/language.json
@@ -1,27 +1,27 @@
-[
-    {"reportTitleGeneral":"General Report"},
-    {"reportTitleMoney":"Things Report"},
-    {"about":"About"},
-    {"stuff":"Stuff"},
-    {"things":"Things"},
-    {"whatnot":"Whatnot"},
-    {"settings":"Settings"},
-    {"sub01":"My Stuff"},
-    {"sub02":"Your Stuff"},
-    {"sub03":"His Stuff"},
-    {"sub04":"Her Stuff"},
-    {"sub11":"What Not"},
-    {"sub12":"What Now?"},
-    {"sub13":"What The...?"},
-    {"sub13":"Account"},
-    {"userId":"User ID"},
-    {"username":"Username"},
-    {"first_name":"First Name"},
-    {"last_name":"Last Name"},
-    {"email":"Email"},
-    {"city":"City"},
-    {"state":"State"},
-    {"animal_scientific":"Scientific Name"},
-    {"animal_common":"Common Name"},
-    {"drug_name":"Drug Name"}
-]
+{
+    "reportTitleGeneral":"General Report",
+    "reportTitleMoney":"Things Report",
+    "about":"About",
+    "stuff":"Stuff",
+    "things":"Things",
+    "whatnot":"Whatnot",
+    "settings":"Settings",
+    "sub01":"My Stuff",
+    "sub02":"Your Stuff",
+    "sub03":"His Stuff",
+    "sub04":"Her Stuff",
+    "sub11":"What Not",
+    "sub12":"What Now?",
+    "sub13":"What The...?",
+    "sub13":"Account",
+    "userId":"User ID",
+    "username":"Username",
+    "first_name":"First Name",
+    "last_name":"Last Name",
+    "email":"Email",
+    "city":"City",
+    "state":"State",
+    "animal_scientific":"Scientific Name",
+    "animal_common":"Common Name",
+    "drug_name":"Drug Name"
+}
