--- a/localization/en/language.json
+++ b/localization/en/language.json
@@ -6,6 +6,9 @@
     "things":"Things",
     "whatnot":"Whatnot",
     "settings":"Settings",
+    "account":"Account",
+    "profile":"Profile",
+    "something":"Something",
     "sub01":"My Stuff",
     "sub02":"Your Stuff",
     "sub03":"His Stuff",
@@ -13,7 +16,6 @@
     "sub11":"What Not",
     "sub12":"What Now?",
     "sub13":"What The...?",
-    "sub13":"Account",
     "userId":"User ID",
     "username":"Username",
     "first_name":"First Name",
