--- a/localization/kl/language.json
+++ b/localization/kl/language.json
@@ -6,6 +6,9 @@
     "things":"Doch",
     "whatnot":"Sar",
     "settings":"DuH",
+    "account":"TeywI'",
+    "profile":"QoghDu'DajDaq",
+    "something":"Vay'",
     "sub01":"TlhIlHal GhoD",
     "sub02":"Lu' GhoD",
     "sub03":"GhaH GhoD",
@@ -13,7 +16,6 @@
     "sub11":"Nuq Qo'",
     "sub12":"Nuq DaH?",
     "sub13":"Nuq...?",
-    "sub13":"TeywI'",
     "userId":"Nuv mI'",
     "username":"Nuv Pong",
     "first_name":"Wa'DIch pong",
