--- a/localization/en/language.json
+++ b/localization/en/language.json
@@ -1,6 +1,6 @@
 {
     "reportTitleGeneral":"General Report",
-    "reportTitleMoney":"Things Report",
+    "reportTitleMoney":"Money Report",
     "about":"About",
     "stuff":"Stuff",
     "things":"Things",
