--- a/localization/en/language.json
+++ b/localization/en/language.json
@@ -1,6 +1,7 @@
 {
     "reportTitleGeneral":"General Report",
     "reportTitleMoney":"Money Report",
+    "reportTitleThings":"Things Report",
     "about":"About",
     "stuff":"Stuff",
     "things":"Things",
