--- a/localization/kl/language.json
+++ b/localization/kl/language.json
@@ -1,6 +1,7 @@
 {
     "reportTitleGeneral":"Sa' Ja'",
     "reportTitleMoney":"Huch Ja'",
+    "reportTitleThings":"Doch Ja",
     "about":"Umqu' ghot",
     "stuff":"GhoD",
     "things":"Doch",
